[project]
name = "banking_financial_services_intelligent_customer_resolution"
version = "0.1.0"
description = "banking-financial-services-intelligent-customer-resolution using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
banking_financial_services_intelligent_customer_resolution = "banking_financial_services_intelligent_customer_resolution.main:run"
run_crew = "banking_financial_services_intelligent_customer_resolution.main:run"
train = "banking_financial_services_intelligent_customer_resolution.main:train"
replay = "banking_financial_services_intelligent_customer_resolution.main:replay"
test = "banking_financial_services_intelligent_customer_resolution.main:test"
run_with_trigger = "banking_financial_services_intelligent_customer_resolution.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
